// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleCard renders an article properly 1`] = `
.c3 {
  margin: 5px 20px 0 0;
  white-space: nowrap;
}

.c2 {
  margin: 10px 20px 0 0;
}

.c2::before {
  content: "";
  display: inline-block;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin: 0 5px 1px 0;
  background-color: #000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: #000;
}

.c6 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  -webkit-transition: opacity 0.15s;
  transition: opacity 0.15s;
  display: block;
}

.c4 {
  position: relative;
  height: inherit;
  background: white;
}

.c0 {
  border: 1px solid;
  border-radius: 2px;
  color: #000;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.c0 .c5 {
  opacity: 1;
}

.c0:hover .c5 {
  opacity: 0.7;
}

<a
  className="ArticleCard c0"
  color="#000"
  href="new-yorks-next-art-district"
  onClick={[Function]}
>
  <div
    className="kXtlsF"
  >
    <div
      className="jiYvGF"
      width={
        Array [
          "100%",
          "100%",
          "50%",
          "50%",
        ]
      }
    >
      <div>
        <div
          className="bOrPFB cpSHOt"
          fontFamily={
            Object {
              "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
              "fontWeight": 500,
            }
          }
          fontSize="14px"
        >
          The Future of Art
        </div>
        <div
          className="bOrPFB dmUTBA"
          fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
          fontSize={
            Array [
              "28px",
              "28px",
              "42px",
              "42px",
            ]
          }
        >
          New York's Next Art District
        </div>
        <div
          className="ibZhkv lhPpoe"
          fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
          fontSize={
            Array [
              "18px",
              "18px",
              "22px",
              "22px",
            ]
          }
        >
          Land exhibitions, make influential contacts, and gain valuable feedback about your work.
        </div>
      </div>
      <div
        className="Byline c1"
        color="#000"
      >
        <div
          className="bOrPFB fXsUty"
          fontFamily={
            Object {
              "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
              "fontWeight": 500,
            }
          }
          fontSize="14px"
        >
          <div
            className="c2"
            color="#000"
          >
            Casey Lesser
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            className="bOrPFB fXsUty"
            fontFamily={
              Object {
                "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                "fontWeight": 500,
              }
            }
            fontSize="14px"
          >
            May 19, 2017
          </div>
        </div>
      </div>
    </div>
    <div
      className="c4 iqiPK"
      width={
        Array [
          "100%",
          "100%",
          "50%",
          "50%",
        ]
      }
    >
      <img
        className="c5 c6"
        src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2F7lsxxsw0qPAuKl37jEYitw%252Farticle%2Basset%2B1-hig%2Bres%2Bcopy.jpg&width=680&height=450&quality=95"
      />
    </div>
  </div>
</a>
`;

exports[`ArticleCard renders an article with children properly 1`] = `
.c3 {
  width: 32px;
  height: 32px;
}

.c1 {
  position: relative;
  height: inherit;
  background: white;
}

.c0 {
  border: 1px solid;
  border-radius: 2px;
  color: #000;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.c0 .ArticleCard__Image-nqsvxw-0 {
  opacity: 1;
}

.c0:hover .ArticleCard__Image-nqsvxw-0 {
  opacity: 0.7;
}

.c2 {
  position: absolute;
  left: 20px;
  right: 20px;
  bottom: 20px;
}

.c2 svg {
  height: 40px;
}

@media (max-width:900px) {
  .c2 svg {
    height: 30px;
  }
}

<a
  className="ArticleCard c0"
  color="#000"
  href="joanne-artman-gallery-poetry-naturerefinement-form"
  onClick={[Function]}
>
  <div
    className="kXtlsF"
  >
    <div
      className="jiYvGF"
      width={
        Array [
          "100%",
          "100%",
          "50%",
          "50%",
        ]
      }
    >
      <div>
        <div
          className="bOrPFB cpSHOt"
          fontFamily={
            Object {
              "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
              "fontWeight": 500,
            }
          }
          fontSize="14px"
        >
          The Future of Art
        </div>
        <div
          className="bOrPFB dmUTBA"
          fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
          fontSize={
            Array [
              "28px",
              "28px",
              "42px",
              "42px",
            ]
          }
        >
          <div>
            Child 
            title
          </div>
        </div>
        <div
          className="ibZhkv lhPpoe"
          fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
          fontSize={
            Array [
              "18px",
              "18px",
              "22px",
              "22px",
            ]
          }
        >
          <div>
            Child 
            description
          </div>
        </div>
      </div>
      <div
        className="bOrPFB fXsUty"
        fontFamily={
          Object {
            "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
            "fontWeight": 500,
          }
        }
        fontSize="14px"
      >
        <div>
          Child 
          date
        </div>
      </div>
    </div>
    <div
      className="c1 iqiPK"
      width={
        Array [
          "100%",
          "100%",
          "50%",
          "50%",
        ]
      }
    >
      <div>
        Child 
        image
      </div>
      <div
        className="c2 ifRBhy"
      >
        <svg
          className="c3"
          version="1.1"
          viewBox="0 0 40 56"
          x="0px"
          xmlns="http://www.w3.org/2000/svg"
          y="0px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <polygon
              fill="#000"
              points="0 0 0 56 39.3600006 28"
            />
          </g>
        </svg>
        <div
          className="bOrPFB bZsSMq"
          fontFamily={
            Object {
              "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
              "fontWeight": 500,
            }
          }
          fontSize="14px"
        >
          02:28
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`ArticleCard renders an article with unpublished media properly 1`] = `
.c1 {
  margin: 5px 20px 0 0;
  white-space: nowrap;
}

.c6 {
  width: 32px;
  height: 32px;
}

.c4 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  -webkit-transition: opacity 0.15s;
  transition: opacity 0.15s;
  display: block;
}

.c2 {
  position: relative;
  height: inherit;
  background: white;
}

.c0 {
  border: 1px solid;
  border-radius: 2px;
  color: #000;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.c0 .c3 {
  opacity: 1;
}

.c0:hover .c3 {
  opacity: 0.7;
}

.c5 {
  position: absolute;
  left: 20px;
  right: 20px;
  bottom: 20px;
}

.c5 svg {
  height: 40px;
}

@media (max-width:900px) {
  .c5 svg {
    height: 30px;
  }
}

<a
  className="ArticleCard c0"
  color="#000"
  href="joanne-artman-gallery-poetry-naturerefinement-form"
  onClick={[Function]}
>
  <div
    className="kXtlsF"
  >
    <div
      className="jiYvGF"
      width={
        Array [
          "100%",
          "100%",
          "50%",
          "50%",
        ]
      }
    >
      <div>
        <div
          className="bOrPFB cpSHOt"
          fontFamily={
            Object {
              "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
              "fontWeight": 500,
            }
          }
          fontSize="14px"
        >
          The Future of Art
        </div>
        <div
          className="bOrPFB dmUTBA"
          fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
          fontSize={
            Array [
              "28px",
              "28px",
              "42px",
              "42px",
            ]
          }
        >
          New Study Shows the Gender Pay Gap for Artists Is Not So Simple
        </div>
        <div
          className="ibZhkv lhPpoe"
          fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
          fontSize={
            Array [
              "18px",
              "18px",
              "22px",
              "22px",
            ]
          }
        >
          The elegant spiral of the Nautilus shell, the sinuous pattern of the banks of a river, or the swirling vortex street of clouds - patterns exist.
        </div>
      </div>
      <div
        className="c1"
      >
        <div
          className="bOrPFB fXsUty"
          fontFamily={
            Object {
              "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
              "fontWeight": 500,
            }
          }
          fontSize="14px"
        >
          Aug 28, 2017
        </div>
      </div>
    </div>
    <div
      className="c2 iqiPK"
      width={
        Array [
          "100%",
          "100%",
          "50%",
          "50%",
        ]
      }
    >
      <img
        className="c3 c4"
        src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FwHFgQlrTrHav5O6bQRJ0dg%252FUntitled%2BSuspended_30x67x33%2B%25282%2529_sm%2Bcropped.jpg&width=680&height=450&quality=95"
      />
      <div
        className="c5 ifRBhy"
      >
        <svg
          className="c6"
          version="1.1"
          viewBox="0 0 40 56"
          x="0px"
          xmlns="http://www.w3.org/2000/svg"
          y="0px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <polygon
              fill="#000"
              points="0 0 0 56 39.3600006 28"
            />
          </g>
        </svg>
        <div
          className="bOrPFB bZsSMq"
          fontFamily={
            Object {
              "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
              "fontWeight": 500,
            }
          }
          fontSize="14px"
        >
          02:28
        </div>
      </div>
    </div>
  </div>
</a>
`;
